test/libhyperion/syntaxTests/events/event_function_type_indexed.hyp
contract C {
	event Test(function() external indexed);
	function f() public {
		emit Test(this.f);
	}
}
// ----
// TypeError 4888: (25-52): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
